kasten-cel/k10-validate-ns-by-preset-label/.chainsaw-test/ns-good.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k10-validatens-goodns01
  labels:
    dataprotection: gold
---
apiVersion: v1
kind: Namespace
metadata:
  name: k10-validatens-goodns02
  labels:
    dataprotection: silver
---
apiVersion: v1
kind: Namespace
metadata:
  name: k10-validatens-goodns03
  labels:
    dataprotection: bronze
---
apiVersion: v1
kind: Namespace
metadata:
  name: k10-validatens-goodns04
  labels:
    dataprotection: none
