kasten-cel/k10-validate-ns-by-preset-label/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: k10-validate-ns-by-preset-label
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
