kasten-cel/k10-validate-ns-by-preset-label/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: k10-validate-ns-by-preset-label
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../k10-validate-ns-by-preset-label.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: k10-validate-ns-by-preset-label
          spec:
            validationFailureAction: Enforce
    - assert:
        file: chainsaw-step-01-assert-1.yaml
    - assert:
        file: chainsaw-step-01-assert-2.yaml
  - name: step-02
    try:
    - apply:
        file: ns-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: ns-bad.yaml
